--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@ Ormissia's Blog</a>
 <img src=/images/404_huf404c6818e5475c7870a4722b4efea20_110323_1500x0_resize_box_3.png alt="Page Not Found">
 <div class=message>
 <h1>404</h1>
-<h4>The page you are looking for is not there yet.</h4>
+<h4>您查找的页面已私奔。</h4>
 </div>
 </div>
 </div>
@@ -52,7 +52,18 @@ Ormissia's Blog</a>
 <footer class="container-fluid text-center align-content-center footer pb-2">
 <div class="container pt-5">
 <div class="row text-left">
+<div class="col-md-4 col-sm-12">
+<h5>联系方式:</h5>
+<ul>
+<li><span>QQ: </span> <span>1432050813</span></li>
+<li><span>Email: </span> <span>ormissia@outlook.com</span></li>
+</ul>
 </div>
+</div>
+</div>
+<hr>
+<div class=container>
+<p id=disclaimer><strong>责任通知:</strong> 老铁都看底了，要负责的哦</p>
 </div>
 <hr>
 <div class=container>
