--- a/notes/sql/index.html
+++ b/notes/sql/index.html
@@ -49,7 +49,7 @@ Ormissia's Blog</a>
 </form>
 <div class=sidebar-tree>
 <ul class=tree id=tree>
-<li id=list-heading><a href=/notes data-filter=all>Notes</a></li>
+<li id=list-heading><a href=/notes data-filter=all>笔记</a></li>
 <div class=subtree>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/>Go</a>
@@ -206,7 +206,18 @@ Ormissia's Blog</a>
 <footer class="container-fluid text-center align-content-center footer pb-2">
 <div class="container pt-5">
 <div class="row text-left">
+<div class="col-md-4 col-sm-12">
+<h5>联系方式:</h5>
+<ul>
+<li><span>QQ: </span> <span>1432050813</span></li>
+<li><span>Email: </span> <span>ormissia@outlook.com</span></li>
+</ul>
 </div>
+</div>
+</div>
+<hr>
+<div class=container>
+<p id=disclaimer><strong>责任通知:</strong> 老铁都看底了，要负责的哦</p>
 </div>
 <hr>
 <div class=container>
