--- a/notes/sql/dml/index.html
+++ b/notes/sql/dml/index.html
@@ -205,6 +205,18 @@ Ormissia's Blog</a>
 </div>
 </div>
 </div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>sum结果为null时置为0</span></h5>
+<div class=card>
+<div class=card-body><p>SQL中使用<code>sum</code>统计总数时:<code>sum(col_name)</code>，如果某列不符合<code>sum</code>的条件（比如某列中含有NULL元素，或者不是数值类型，或者没有符合<code>where</code>条件的行），那么会返回NULL
+有的时候不希望sum的结果为<code>NULL</code>，可以做如下的处理：</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>SELECT</span> COALESCE(<span style=color:#66d9ef>sum</span>(col_name), <span style=color:#ae81ff>0</span>) <span style=color:#66d9ef>FROM</span> <span style=color:#66d9ef>Table</span>
+</code></pre></div><p>此外还有<code>ISNULL(SQL Server)</code>，<code>NVL(Oracle)</code>以及<code>IFNULL(MySQL)</code>的用法，起到同样的效果</p>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div class=paginator>
 </div>
