--- a/index.html
+++ b/index.html
@@ -390,6 +390,23 @@ Ormissia's Blog</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/posts/knowledge/2011-react-note/ title=React学习笔记 class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/posts/knowledge/2011-react-note/head.svg alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>React学习笔记</h5>
+<p class="card-text post-summary"> 初始化React项目 npm install -g react npm install -g react-dom npm install -g react-scripts npm install -g create-react-app create-react-app hello-react cd hello-react npm start 更新package.json npm install -g npm-check-updates ncu # 或者npm-check-updates ncu -u to upgrade package.json npm install </p>
+</div>
+<div class=card-footer>
+<span class=float-left>December 23, 2021</span>
+<a href=/posts/knowledge/2011-react-note/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/posts/problems/5006-mysql-brew-conf/ title=修改Mac上brew安装的MySQL配置 class=post-card-link>
 <div class=card>
 <div class=card-head>
@@ -492,26 +509,6 @@ $ k get pod -n kube-test-1 -o wide | grep whoami whoami-0 1/1 Running 0 29m 10.<
 <div class=card-footer>
 <span class=float-left>November 1, 2021</span>
 <a href=/posts/problems/5004-kubernetes-dashboard-token/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/knowledge/2008-elasticstack-es/ title=Elasticsearch class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/posts/knowledge/2008-elasticstack-es/head.svg alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>Elasticsearch</h5>
-<p class="card-text post-summary"> 搜索类型 搜索引擎：百度、搜狗、谷歌、必应 垂直领域：各大电商平台、OA系统、站内搜索 商业智能：数据分析、数据挖掘、用户画像 GitHub：千亿+行代码秒查 日志系统：ELK ES特点 搜索、聚合分析、大数据存储 分布式、高性能、高可用、可伸缩、易维护 支持文本搜索、结构化数据、非结构化数据、地理位置搜索等 ES单机部署 同一节点启动不同服务 ./bin/elasticsearch -E path.data=data1 -E path.logs=log1 -E node.name=node1 -E cluster.name=ormissia_test ./bin/elasticsearch -E path.data=data2 -E path.logs=log2 -E node.name=node2 -E cluster.name=ormissia_test http://localhost:9200/ http://localhost:9201/ 不同节点启动同一服务 open ./elasticsearch_node1/bin/elasticsearch open ./elasticsearch_node2/bin/elasticsearch open ./elasticsearch_node3/bin/elasticsearch open ./elasticsearch_node4/bin/elasticsearch open ./elasticsearch_node5/bin/elasticsearch open ./kibana-7.15.1-darwin-x86_64/bin/kibana elasticsearch-head插件 GitHub Repository
-git clone git://github.com/mobz/elasticsearch-head.git cd elasticsearch-head npm install npm run start 默认端口：9100
-如果集群无法连接，需要修改ES配置文件
-http.cors.enabled: true http.cors.allow-origin: "*" elasticsearch-head也可以以Chrome插件的方式安装</p>
-</div>
-<div class=card-footer>
-<span class=float-left>October 19, 2021</span>
-<a href=/posts/knowledge/2008-elasticstack-es/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
 </div>
 </div>
 </a>
