--- a/index.html
+++ b/index.html
@@ -390,6 +390,27 @@ Ormissia's Blog</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/posts/deployment/3008-linux-redis/ title=Redis默认配置文件修改 class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/posts/deployment/3008-linux-redis/head.svg alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>Redis默认配置文件修改</h5>
+<p class="card-text post-summary"> 与MySQL类似，Redis安装完也不能直接使用，默认的配置文件有几处需要修改
+使用yum安装的Redis默认配置文件路径：/etc/redis.conf
+允许访问地址 # bind 127.0.0.1 将只限本地访问的配置注释掉
+修改保护模式 protected-mode no 将保护模式修改为no
+启用守护进程 daemonize yes 将守护进程设置为yes</p>
+</div>
+<div class=card-footer>
+<span class=float-left>January 13, 2022</span>
+<a href=/posts/deployment/3008-linux-redis/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/posts/knowledge/2012-io-network/ title=网络IO演进历程 class=post-card-link>
 <div class=card>
 <div class=card-head>
@@ -486,31 +507,6 @@ systemctl restart docker.service </p>
 <div class=card-footer>
 <span class=float-left>November 4, 2021</span>
 <a href=/posts/problems/5005-docker-image-source/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/knowledge/2009-kubernetes-handless-statefullset/ title=k8s中通过Headless连接StatefulSet class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/posts/knowledge/2009-kubernetes-handless-statefullset/head.svg alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>k8s中通过Headless连接StatefulSet</h5>
-<p class="card-text post-summary"> 连接一些多实例的服务（比如Kafka、ES）时，通常是在client端做负载均衡。
-假如这种集群又恰好跑在k8s中，如果是普通业务类型的服务，通常是创建一个Service来做为一个代理去访问不同实例，从而达到负载均衡的目的。
-但是诸如如：Kafka、ES类型的服务，还用Service来做负载均衡，显然就不那么合理了（诚然，Kafka、ES这种东西多半是不会跑在k8s上的，这里只是作为一个引子，不在本文讨论的范畴）。
-实验环境 多实例服务whoami在kube-test-1的命名空间下 多实例服务whoami以StatefulSet方式部署，设置为3个实例，会自动创建whoami-0、whoami-1以及whoami-2三个Pod 给StatefulSet创建Headless类型的Service 模拟客户端使用Nginx镜像，部署在kube-test-2的命名空间下（使用curl命令模拟） 本实验创建资源使用的k8s dashboard，创建的资源默认放在选中的明明空间下，因此yml文件中未指定namespace。
-Server cluster 服务端模拟相关资源在kube-test-1下创建
-StatefulSet 使用traefik/whoami镜像来模拟服务端
-这里使用StatefulSet的方式创建服务端。spec.replicas设为3，此时会自动创建whoami-0、whoami-1以及whoami-2三个Pod。
-apiVersion: apps/v1 kind: StatefulSet metadata: name: whoami labels: app: whoami spec: replicas: 3 selector: matchLabels: app: whoami serviceName: whoami template: metadata: name: whoami labels: app: whoami spec: containers: - name: whoami image: traefik/whoami ports: - containerPort: 80 注意这里的spec.serviceName必须与下面的Service名字相同，否则调用时候pod的subdomain只能使用IP
-$ k get pod -n kube-test-1 -o wide | grep whoami whoami-0 1/1 Running 0 29m 10.</p>
-</div>
-<div class=card-footer>
-<span class=float-left>November 1, 2021</span>
-<a href=/posts/knowledge/2009-kubernetes-handless-statefullset/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
 </div>
 </div>
 </a>
