--- a/index.html
+++ b/index.html
@@ -354,14 +354,15 @@ Ormissia's Blog</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/knowledge/2009-redis/001-cache/ title=Redis缓存三种问题 class=post-card-link>
+<a href=/posts/knowledge/2009-redis/001-cache/ title=Redis缓存相关问题 class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/posts/knowledge/2009-redis/001-cache/head.svg alt="Card image cap">
 </div>
 <div class=card-body>
-<h5 class=card-title>Redis缓存三种问题</h5>
-<p class="card-text post-summary"> 缓存穿透 针对多个key
+<h5 class=card-title>Redis缓存相关问题</h5>
+<p class="card-text post-summary"> 缓存一致性 形成原因 数据增删修操作造成的缓存内容与持久层内容的不一致
+解决办法 先更新缓存后更新数据库：更新缓存后程序异常终止或持久化失败导致数据未持久化 先更新数据库后更新缓存：更新数据库后程序异常终止或更新缓存失败导致缓存数据与数据库不一致。解决办法：先更新缓存，后将数据修改操作写入持久化队列，比如Kafka，让下游服务执行持久化操作 缓存穿透 针对多个key
 形成原因 缓存穿透是指查询一个不存在的数据，由于缓存是不命中时，去存储层（如MySQL）查找数据。如果从存储层查不到数据没有写入缓存，这将导致这个不存在的数据每次请求都要到存储层去查询，导致缓存穿透。流量一旦大了之后，容易导致DB宕机，进而影响整个业务。利用不存在的key频繁攻击应用，这就是漏洞。
 解决办法 使用布隆过滤器，如果从DB中没有查到则添加到布隆过滤器中。但由于布隆过滤器中存储的内容是不能修改的，需要注意使用场景。如果当前查询不存在的key以后会出现再实际数据中，使用布隆过滤器会导致改条数据无法查询到。 缓存不存在的key，如果从DB中没有查询到该数据，则将对应的key写入缓存中，并加一个合适的过期时间。value内容写一个不存在的标记，当程序读到该内容后，即知道这条key不存在对应的内容直接返回，不会将流量打入存储层。 缓存雪崩 多个key相同的过期时间
 形成原因 缓存雪崩是指多个key在相同时间过期，导致缓存在某一时刻同时失效。请求全部转发到DB，DB瞬时压力过高宕机导致服务不可用。
@@ -386,7 +387,11 @@ Ormissia's Blog</a>
 </div>
 <div class=card-body>
 <h5 class=card-title>Golang中的原子操作</h5>
-<p class="card-text post-summary"> 参考链接 Golang五种原子性操作的用法详解 </p>
+<p class="card-text post-summary"> 互斥锁跟原子操作的区别 在并发编程里，Go语言sync包里的同步原语Mutex是我们经常用来保证并发安全的，那么他跟atomic包在使用目的和底层实现上都不一样：
+使用目的：互斥锁是用来保护一段逻辑，原子操作用于对一个变量的更新保护。 底层实现：Mutex由操作系统的调度器实现，而atomic包中的原子操作则由底层硬件指令直接提供支持，这些指令在执行的过程中是不允许中断的，因此原子操作可以在lock-free的情况下保证并发安全，并且它的性能也能做到随CPU个数的增多而线性扩展。 对于一个变量更新的保护，原子操作通常会更有效率，并且更能利用计算机多核的优势。
+性能测试对比 互斥锁性能测试 使用sync包下面互斥锁的多线程加法操作
+func syncAdd(param int64) int64 { var wg sync.WaitGroup lock := sync.Mutex{} for i := 0; i &lt; 10; i++ { wg.Add(1) go func() { for i := 0; i &lt; 1000000; i++ { lock.Lock() param++ lock.Unlock() } wg.Done() }() } wg.Wait() return param } Benchmark测试方法
+func BenchmarkSync(b *testing.B) { for i := 0; i &lt; b.N; i++ { flag := int64(0) res := syncAdd(flag) if res !</p>
 </div>
 <div class=card-footer>
 <span class=float-left>February 22, 2022</span>
